# agentbox_skills

./: .gitignore  README.md  index.js  openclaw.plugin.json  package-lock.json  package.json
agentbox_core/: README.md  deployments.json  id-mappings.json  pyproject.toml
agentbox_core/abi/: IAgentboxCore.json
agentbox_core/agentbox_runtime/: __init__.py  action_support.py  adapters.py  config.py  custody.py  decoders.py  errors.py  explorer.py  indexer.py  player_logic.py  precheck.py  results.py  rpc.py  schemas.py  signer_store.py  state.py  tooling.py  tx.py  wallet_store.py  world_info.py
agentbox_core/skill_player/: .env.example  __init__.py  main.py  manifest.json
agentbox_core/skill_player/adapters/: __init__.py  config.py  core.py  economy.py  land.py  resource.py  role.py
agentbox_core/skill_player/guards/: precheck.py
agentbox_core/skill_player/models/: __init__.py  requests.py  responses.py
agentbox_core/skill_player/tools/: __init__.py  economy_tools.py  read_tools.py  role_tools.py
agentbox_core/skill_player/utils/: __init__.py  errors.py  rpc.py  tx.py
docs/: AGENTBOX_GAME_INTRO_CN.md  HERMES_CRON_PROMPT.md  HERMES_CRON_PROMPT_CN.md  HERMES_DAILY_REPORT_PROMPT.md  HERMES_DAILY_REPORT_PROMPT_CN.md  OPENCLAW_CRON_PROMPT.md  OPENCLAW_CRON_PROMPT_CN.md  OPENCLAW_DAILY_REPORT_PROMPT.md  OPENCLAW_DAILY_REPORT_PROMPT_CN.md  README.md  agentbox-background-runner-trace.txt  agentbox_intro_cn.md
runtime/: clients.js  common.js  contracts.js  player-runtime.js  settings.js
scripts/: agentbox-hermes  install_hermes_skills.py  (+3 more)
(+8 files in other folders)
